--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Assignment008</title>
+    <title>Bike Rotate</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="product-carousel.css">   
     <script src="script.js" defer></script>
