--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     
     <div id="wrapper">
         <header class="header">
-            <h1>Assignment008</h1>
+            <h1>Bike Rotate</h1>
         </header>
         <main class="main">
             <h2>Bike Product: LTD Race</h2>
